- Stop admin table heading words from breaking - Remove extra space between `across the purchase journey.` and the  `*` on home page - renamed `dmb-color-bg` to `dmb-u-grey-bg` #363

--- a/src/static/src/scss/legacy/pages/_reports-admin.scss
+++ b/src/static/src/scss/legacy/pages/_reports-admin.scss
@@ -48,6 +48,12 @@
   &__table {
     background: none;
 
+    th {
+      span {
+        overflow-wrap: normal;
+      }
+    }
+
     td {
       white-space: nowrap;
     }
